--- a/css/style.css
+++ b/css/style.css
@@ -248,14 +248,14 @@ a.gplus:active { background-position: -80px -80px; }
 #wood {
   background-image: url(../images/wood.jpg), url(../images/wood_slice.jpg);
   background-position: center top, left top;
-  background-repeat: no-repeat, repeat-y;
+  background-repeat: repeat, repeat-y;
   padding: 30px 0;
 }
 
 /********** Sections **********/
 
 section {
-  padding: 20px;
+  padding: 10px;
   background: white;
 }
 
